<resources>
    <string name="app_name">YAMDA</string>
    <string name="search_value">Search</string>
    <string name="API_KEY" translatable="false">e6b5c7874febd4c400f94838548bafac</string>
    <string name="TMDB_URL" translatable="false">api.themoviedb.org/3</string>
    <string name="TMDB_HOMEPAGE_URL" translatable="false">http://themoviedb.org</string>
    <string name="TMDB_IMAGE_URL" translatable="false">image.tmdb.org/t/p</string>
    <string name="results_for" translatable="true">Results for</string>

    <string name="develoers">Developers:</string>
    <string name="dev1" translatable="false">\u2022 David Duarte</string>
    <string name="dev2" translatable="false">\u2022 João Duarte</string>
    <string name="dev3" translatable="false">\u2022 Edgar Alves</string>
    <string name="advisors">Advisors:</string>
    <string name="adv1" translatable="false">\u2022 João Trindade</string>
    <string name="adv2" translatable="false">\u2022 Luís Falcão</string>
    <string name="adv3" translatable="false">\u2022 Paulo Pereira</string>
    <string name="about">About</string>
    <string name="iconCredit">\u2022 Icon made by Freepik from www.flaticon.com</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Movie...</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="following">Following</string>
    <string name="references">References:</string>
    <string name="source2">\u2022 Data provided by The Movie DB WebAPI</string>
    <string name="toolbar_search">Search</string>
    <string name="no_results">no results</string>
    <string name="item_title">Title</string>
    <string name="item_release_date">Release Date</string>
    <string name="item_rating">Rating</string>
    <string name="summary">Summary</string>
    <string name="detail_genres">Genres</string>
    <string name="detail_rating">Rating</string>
    <string name="detail_release_date">Release Date</string>
    <string name="detail_summary">Summary</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="toast_follow">Following</string>
    <string name="no_more_results_to_show">no more results to show</string>
    <string name="toast_unfollow">Unfollowed</string>

    <!-- Preferences Fragment Strings-->

    <!-- Preferences Keys-->
    <string name="connection_type_title">Connectivity</string>
    <string name="connection_type_summary">Only use Wi-Fi</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_summary">Receive Notifications</string>
    <string name="periodicity_title">Update Periodicity of Database</string>
    <string name="periodicity_list_title">Frequency</string>
    <string name="periodicity_list_cancel">Cancel</string>
    <string name="notification_vibrate">Vibrate</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>12 hours</item>
        <item>24 hours</item>
        <item>3 days</item>
        <item>7 days</item>
        <item>14 days</item>
        <item>30 days</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>12</item>
        <item>24</item>
        <item>72</item>
        <item>168</item>
        <item>336</item>
        <item>720</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="toast_follow">Following</string>
    <string name="no_more_results_to_show">no more results to show</string>
    <string name="toast_unfollow">Unfollowed</string>
    <string name="toast_follow_error">Error Following</string>
</resources>
