<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pdm_1718i.yamda.ui.activities.AboutActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/devTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/develoers" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/dev1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/devTitle"
                android:text="@string/dev1" />

            <TextView
                android:id="@+id/dev2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev2" />

            <TextView
                android:id="@+id/dev3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dev3" />
        </android.support.v7.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/advisorsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advisors" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/adv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/devTitle"
                android:text="@string/adv1" />

            <TextView
                android:id="@+id/adv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adv2" />

            <TextView
                android:id="@+id/adv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adv3" />

        </android.support.v7.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/sourceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/references" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iconCredit" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source2" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:cropToPadding="false"
        android:onClick="onLogoClick"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_tmdb_logo" />


</RelativeLayout>
