<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    style="@style/DefaultMargin">

    <ImageView
        android:id="@+id/image"
        android:layout_width="85dp"
        android:layout_height="110dp"
        android:src="@drawable/ic_movie_thumbnail"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/DefaultItemHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_title" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TITLE"/>

        <TextView
            style="@style/DefaultItemHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_release_date" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RELEASE_DATE"
            />

        <TextView
            style="@style/DefaultItemHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_rating" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SCORE"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/10"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>