<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="pdm_1718i.yamda.ui.activities.MovieDetailActivity"
    style="@style/DefaultMargin"
    android:orientation="horizontal"
    android:id="@+id/layout"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/follow_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        />

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:scaleType="fitStart"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/movie_poster">

        <TextView
            style="@style/DefaultItemHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_release_date" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RELEASE_DATE" />

        <!--Rating-->
        <TextView
            style="@style/DefaultItemHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_rating" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RATING" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/10" />

        </LinearLayout>

        <TextView
            style="@style/DefaultItemHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_genres" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GENRES" />

        <ImageView
            android:id="@+id/imdb_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_imdb_logo" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/movie_poster">

        <TextView
            android:id="@+id/textView"
            style="@style/DefaultItemHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_summary" />

        <ScrollView
            android:layout_below="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="overview" />

        </ScrollView>

    </LinearLayout>

</RelativeLayout>